[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/championship/dashboard/group-stage/GroupStage.gd" type="Script" id=1]
[ext_resource path="res://src/ui/championship/dashboard/table/Table.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/airbroomball_theme_small_font.tres" type="Theme" id=3]

[node name="GroupStage" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = -164.0
margin_right = 292.0
margin_bottom = 164.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="Group1" type="HBoxContainer" parent="."]
margin_right = 584.0
margin_bottom = 82.0
custom_constants/separation = 20
alignment = 2

[node name="GroupA" type="Label" parent="Group1"]
margin_left = 1.0
margin_top = 25.0
margin_right = 132.0
margin_bottom = 57.0
text = "GROUP_A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group1" parent="Group1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_right = 584.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Group2" type="HBoxContainer" parent="."]
margin_top = 82.0
margin_right = 584.0
margin_bottom = 164.0
custom_constants/separation = 20

[node name="Group2" parent="Group2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 432.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GroupB" type="Label" parent="Group2"]
margin_left = 452.0
margin_top = 25.0
margin_right = 581.0
margin_bottom = 57.0
text = "GROUP_B"

[node name="Group3" type="HBoxContainer" parent="."]
margin_top = 164.0
margin_right = 584.0
margin_bottom = 246.0
custom_constants/separation = 20
alignment = 2

[node name="GroupC" type="Label" parent="Group3"]
margin_left = 3.0
margin_top = 25.0
margin_right = 132.0
margin_bottom = 57.0
text = "GROUP_C"

[node name="Group3" parent="Group3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 152.0
margin_right = 584.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Group4" type="HBoxContainer" parent="."]
margin_top = 246.0
margin_right = 584.0
margin_bottom = 328.0
custom_constants/separation = 20

[node name="Group4" parent="Group4" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 432.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GroupD" type="Label" parent="Group4"]
margin_left = 452.0
margin_top = 25.0
margin_right = 584.0
margin_bottom = 57.0
text = "GROUP_D"
__meta__ = {
"_edit_use_anchors_": false
}
